# fellowshipbackendproject

./: pyproject.toml
fellowshipbackendproject/: .env.example  .env.prod  .env.staging  Makefile  manage.py
fellowshipbackendproject/app/: Untitled-1.sh  admin.py  models.py  serializers.py  urls.py  views.py
fellowshipbackendproject/app/migrations/: 0001_initial.py  0002_rename_title_mediamodel_title_eng_and_more.py
fellowshipbackendproject/base/: middleware.py  models.py
fellowshipbackendproject/fellowshipbackendproject/: asgi.py  settings.py  urls.py  wsgi.py
fellowshipbackendproject/fellowshipbackendproject/settings/: base.py  dev.py  prod.py  staging.py
