[tool.poetry]
name = "fellowshipbackendproject"
version = "0.1.0"
description = "this is a fellowshipbackendproject it is used to create an api."
authors = ["brijeshdabhi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.4"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"

[tool.poetry.dev-dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
